--- a/common/index.html
+++ b/common/index.html
@@ -12,14 +12,22 @@
 <body>
 	<div class="wrapper">
 		<div class="header">
-			<div class="header__inner">
-				<div class="header__logo-wrapper">
+			<div class="header__flex-wrapper header__inner">
+				<div class="header__flex-inner header__logo-wrapper">
 					<img src="img/logo.png" alt="QSOFT" class="header__logo-img">
 				</div>
-				<div class="header__search-wrapper">
-					
+				<div class="header__flex-inner header__search-form-wrapper">
+					<div class="header__search-form"></form>
+						<img class="search-form__search-img" src="img/search.png">
+						<input class="text search-form__input" type="text" placeholder="Найти...">
+					</div>
 				</div>
-				<div class="header__user-wrapper">
+				<div class="header__flex-inner header__user-wrapper">
+					<div class="header__vertical-line"></div>
+					<div class="header__username text">Константин</div>
+					<div class="header__user-avatar">
+						<img class="user-avatar" src="img/user.png"></img>
+					</div>
 					
 				</div>
 			</div>
