--- a/common/index.html
+++ b/common/index.html
@@ -19,18 +19,25 @@
 				<div class="header__flex-inner header__search-form-wrapper">
 					<div class="header__search-form"></form>
 						<img class="search-form__search-img" src="img/search.png">
-						<input class="text search-form__input" type="text" placeholder="Найти...">
+						<input class="text-roboto search-form__input" type="text" placeholder="Найти...">
 					</div>
 				</div>
 				<div class="header__flex-inner header__user-wrapper">
 					<div class="header__vertical-line"></div>
-					<div class="header__username text">Константин</div>
+					<div class="header__username text-roboto">Константин</div>
 					<div class="header__user-avatar">
 						<img class="user-avatar" src="img/user.png"></img>
+					</div>
+					<div class="header__mini-user-icon">
+						<img src="img/user-mini.png" class="mini-user-icon">
 					</div>
 					
 				</div>
 			</div>
+		</div>
+		<div class="text-montserrat header__search-form-mini"></form>
+			<img class="search-form__search-img" src="img/search.png">
+			<input class="text search-form__input" type="text" placeholder="Найти...">
 		</div>
 
 
