--- a/common/index.html
+++ b/common/index.html
@@ -6,7 +6,7 @@
 	<title>QSOFT</title>
 	<link rel="stylesheet" href="mods/mods.css">
 	<link rel="stylesheet" href="header/header.css">
-	<link rel="stylesheet" href="main/main.css">
+	<link rel="stylesheet" href="main/body.css">
 	<link rel="stylesheet" href="footer/footer.css">
 </head>
 <body>
@@ -43,8 +43,33 @@
 
 
 		<div class="main">
-			
-		</div>
+			<div class="text-roboto main__header-text">
+				Наши партнеры
+			</div>
+
+			<div class="main__cards-container">
+				<div class="main__card"> 
+					<img class="brand-img" src="img/henkel.png" alt="Henkel">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/jonhdeere.png" alt="Jonh Deere">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/mac.png" alt="McDonald's">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/ikea.png" alt="IKEA">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/reebok.png" alt="Reebok">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/nike.png" alt="NIKE">
+				</div>
+				<div class="main__card">
+					<img class="brand-img" src="img/cat.png" alt="CATERPILLAR">
+				</div>
+			</div>
 		<div class="footer">
 			
 		</div>
